--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ numpy==1.26.3
 scikit-learn==1.3.2
 streamlit==1.29.0
 streamlit-option-menu==0.3.6
-matplotlib==3.7.1
-seaborn==0.11.2
-pandas==1.4.0
+seaborn
+matplotlib
+pandas
